# Algorythms_technopark_2022.2

./: .gitignore  CMakeLists.txt  README.md  bint  hash  readme.md  stat  task1  task1.cpp  task2.cpp  test.cpp  testFile  tests
DZ_2_files/: CMakeLists.txt
DZ_2_files/include/: matrix.hpp
DZ_2_files/src/: matrix.cpp
source/: main.cpp
task1/: main.cpp
task1/include/: ArcGraph.hpp  BFS_and_DFS.hpp  IGraph.hpp  ListGraph.hpp  MatrixGraph.hpp  SetGraph.hpp  graphFunctions.hpp
task1/src/: ArcGraph.cpp  BFS_and_DFS.cpp  ListGraph.cpp  MatrixGraph.cpp  SetGraph.cpp  graphFunctions.cpp
tasks_2-4/: task_1_hash.cpp  task_2_4_bin.cpp  task_4_1_stat.cpp
temp_test/: 2test  3test  4test  6test  DynamicTest  Dynamic_mass.cpp  Hash_Table.cpp  main2.cpp  main3.cpp  main4.cpp  main6.cpp
test/: CMakeLists.txt  test.cpp
workflows/: cmake.yml
